--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:label="@string/title_activity_criar_mentoria"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".model.ProcurarMentoria"
+            android:name=".view.ProcurarMentoria"
             android:label="@string/title_activity_procurar_mentoria"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
