--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
             android:name=".views.mentorado.HomeMentoradoActivity"
             android:label="@string/title_activity_home_mentorado"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".views.mentor.CadastrarMentoriaActivity"></activity>
+        <activity android:name=".views.mentor.CadastrarMentoriaActivity" />
+        <activity android:name=".VisualizarMentoria"></activity>
     </application>
 
 </manifest>
