--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,14 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".views.mentor.CadastrarMentoriaActivity" />
         <activity android:name=".views.mentorado.VisualizarMentoria" />
-        <activity android:name=".views.mentor.VisualizarAplicacoes"></activity>
+        <activity android:name=".views.mentor.VisualizarAplicacoes" />
+
+        <activity
+            android:name=".views.mentorado.MinhasAplicacoes"
+            android:label="@string/title_activity_minhas_aplicacoes"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
