--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,10 +34,9 @@
         <activity
             android:name=".views.mentorado.MinhasAplicacoes"
             android:label="@string/title_activity_minhas_aplicacoes"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
-        <activity android:name=".views.mentor.VisualizarAplicacao"></activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".views.mentor.VisualizarAplicacao" />
+        <activity android:name=".VisualizarPerfil"></activity>
     </application>
 
 </manifest>
